# TechMcode-Team5

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
contracts/: schemas.json  schemas.py
contracts/fixtures/: ddos_flood_report.json  ground_truth.json  incident_report.json  logs.jsonl  telemetry.csv  topology.json
docs/: architecture_diagram.md  demo_script.md
eval/: results.md  run_eval.py  synth_eval.py  synth_results.md
incidents/: audit_chain.jsonl
incidents/bad_config_push/: flows.csv  ground_truth.json  hardware_telemetry.csv
incidents/capacity_exhaustion/: flows.csv  ground_truth.json  hardware_telemetry.csv
incidents/ddos_flood/: flows.csv  ground_truth.json  hardware_telemetry.csv
incidents/link_degradation/: flows.csv  ground_truth.json  hardware_telemetry.csv
incidents/nic_failure/: flows.csv  ground_truth.json  hardware_telemetry.csv
incidents/port_scan/: flows.csv  ground_truth.json  (+1 more)
scripts/: build_knowledge.py
testbed/: capture.py  compose.testbed.yml  inject.py  recorder.py
tests/: test_analyze_upload.py  test_causal.py  test_contracts.py  test_detect_baseline.py  test_detect_changepoint.py  test_detect_detector.py  test_detect_window.py  test_eval_run_eval.py  test_ingest_arff.py  test_ingest_csv.py  test_ingest_flow_to_kpi.py  test_ingest_parquet.py  test_ingest_store.py  test_knowledge_retrieval.py  test_skeptic_rerank.py  test_synth_generator.py  test_usage_stats.py
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+78 files in other folders)
