[project]
name = "network-rca-assistant"
version = "0.1.0"
description = "Explainable root-cause analysis for network anomalies"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
